docs part 6